--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,32 @@
       name="description"
       content="BossFlow - Planifica tus estrategias contra los mejores bosses"
     />
-    <title>BossFlow</title>
+
+    <!-- HTML Meta Tags -->
+    <title>BossFlow: Planificador Interactivo de Estrategias para Gamers</title>
+    <meta name="description" content="Domina cada combate con BossFlow. Crea diagramas de flujo interactivos, planifica tácticas de batalla y comparte estrategias ganadoras con tu comunidad.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://bossflow.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="BossFlow: Planificador Interactivo de Estrategias para Gamers">
+    <meta property="og:description" content="Domina cada combate con BossFlow. Crea diagramas de flujo interactivos, planifica tácticas de batalla y comparte estrategias ganadoras con tu comunidad.">
+    <meta property="og:image" content="/logo-mini.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="bossflow.app">
+    <meta property="twitter:url" content="https://bossflow.app/">
+    <meta name="twitter:title" content="BossFlow: Planificador Interactivo de Estrategias para Gamers">
+    <meta name="twitter:description" content="Domina cada combate con BossFlow. Crea diagramas de flujo interactivos, planifica tácticas de batalla y comparte estrategias ganadoras con tu comunidad.">
+    <meta name="twitter:image" content="YOUR_IMAGE_URL_HERE">
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="shortcut icon" href="/favicon_io/favicon.ico">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
   </head>
   <body>
     <div id="root"></div>
