Update favicon to use favicon.png and remove unused assets

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,12 +28,8 @@
     <meta name="twitter:description" content="Domina cada combate con BossFlow. Crea diagramas de flujo interactivos, planifica tácticas de batalla y comparte estrategias ganadoras con tu comunidad.">
     <meta name="twitter:image" content="YOUR_IMAGE_URL_HERE">
 
-    <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-    <link rel="shortcut icon" href="/favicon_io/favicon.ico">
-    <link rel="manifest" href="/favicon_io/site.webmanifest">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png">
   </head>
   <body>
     <div id="root"></div>
